[package]
name = "safe-trigger"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.6.18"
tokio = { version = "1.28.1", features = ["full"] }
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.96"
rusqlite = { version = "0.29.0", features = ["bundled"] }
chrono = "0.4"
reqwest = { version = "0.11", features = ["json"] }
async-trait = "0.1"
regex = "1" # Added for parsing error messages in main.rs
